# vec

./: .gitignore  CMakeLists.txt  main.c  vec.c  vec.h
